--- a/studentDashboard/templates/studentDashboard/student_test_page.html
+++ b/studentDashboard/templates/studentDashboard/student_test_page.html
@@ -64,7 +64,7 @@
                             <div class="row optionContents">
                                 <div class="col-9 col-lg-10 pl-0 pr-0">
                                     <p id="op1" name="option1" class="col-12 mb-0 pl-1 pr-0 optionInput">
-                                        Option 1
+                                        My Name is Bharat . I live in Rajasthan. My college is KJCOEMR
                                     </p>
 
                                 </div>
@@ -101,7 +101,7 @@
                         </div>
                     </div>
 
-                    <div class="row optionRow mt-3 mt-lg-4 col-12 mr-0 ml-0 " >
+                    <div class="row optionRow mt-3 mt-lg-4 col-12 mr-0 ml-0 ">
                         <!-- Option 3 -->
                         <div class="col-12 col-md-5 options" id="optionid-3">
                             <div class="row optionContents">
@@ -143,7 +143,7 @@
                     </div>
 
                     <input type="hidden" name="answer" id="corr_op" value="0">
-                    <div class="row col-12 mt-4 mb-4 mr-0 ml-0" >
+                    <div class="row col-12 mt-4 mb-4 mr-0 ml-0">
                         <div class="text-center col-12">
                             <input type="submit" id="nextBtn" value="NEXT" class="btn btn-outline-success " disabled>
                         </div>
@@ -154,40 +154,102 @@
 
         <!-- Side Bar -->
         <div class="questionBar">
-            <table class="questionTable">
-                <tr>
-                    <td class="eachQuestion"> 1 </td>
-                    <td> 2 </td>
-                    <td> 3 </td>
-                    <td> 4 </td>
-                </tr>
-                <tr>
-                    <td> 7 </td>
-                    <td> 8 </td>
-                    <td> 9 </td>
-                    <td> 10 </td>
-                </tr>
-                <tr>
-                    <td> 10 </td>
-                    <td> 11 </td>
-                    <td> 12 </td>
-                    <td> 4 </td>
-                </tr>
-                <tr>
-                    <td> 14 </td>
-                    <td> 15 </td>
-                    <td> 4 </td>
-                    <td> 16 </td>
-                </tr>
-                <tr>
-                    <td> 4 </td>
-                    <td> 18 </td>
-                    <td> 19 </td>
-                    <td> 20 </td>
-                </tr>
-            </table>
+
+            <div class="timerDiv">
+                <p class="Timer"> 04:30:22 </p>
+            </div>
+
+            <div class="questionTableDiv">
+                <table class="questionTable">
+                    <tr id="tableRow">
+                        <td class="eachQuestion"> 1 </td>
+                        <td> 2 </td>
+                        <td> 3 </td>
+                        <td> 4 </td>
+                    </tr>
+                    <tr id="tableRow">
+                        <td class="eachQuestion"> 1 </td>
+                        <td> 2 </td>
+                        <td> 3 </td>
+                        <td> 4 </td>
+                    </tr>
+                    <tr id="tableRow">
+                        <td class="eachQuestion"> 1 </td>
+                        <td> 2 </td>
+                        <td> 3 </td>
+                        <td> 4 </td>
+                    </tr>
+                    <tr id="tableRow">
+                        <td class="eachQuestion"> 1 </td>
+                        <td> 2 </td>
+                        <td> 3 </td>
+                        <td> 4 </td>
+                    </tr>
+                    <tr id="tableRow">
+                        <td class="eachQuestion"> 1 </td>
+                        <td> 2 </td>
+                        <td> 3 </td>
+                        <td> 4 </td>
+                    </tr>
+                    <tr id="tableRow">
+                        <td class="eachQuestion"> 1 </td>
+                        <td> 2 </td>
+                        <td> 3 </td>
+                        <td> 4 </td>
+                    </tr>
+
+                </table>
+            </div>
+
+            <!-- Camera Div -->
+            <div id="cameraDiv">
+                <video autoplay="true" id="videoElement">
+
+                </video>
+            </div>
         </div>
     </div>
+
+
+    <!-- <script>
+        function tableIncrement() {
+
+            var question = 20
+            var tableRow = document.getElementById("tableRow")
+            var one = document.getElementById("one")   
+
+            for(var i=1;i<(question/4);i++){
+                one.innerHTML = "<tr> <td > 5 </td> <td> 6 </td> <td> 7 </td> <td> 8 </td> </tr>"
+                console.log(i);
+                
+            }
+
+            // var tables = document.getElementsByTagName('table');
+            // var table = tables[tables.length - 1];
+            // var rows = table.column;
+
+            // for (var i = 0, td; i < rows.length; i++) {
+            //     td = document.createElement('td');
+            //     td.appendChild(document.createTextNode(i + 1));
+            //     rows[i].insertBefore(td, rows[i].firstChild);
+            // }
+        }
+    </script> -->
+
+<!-- For WebCam -->
+    <script>
+        var video = document.querySelector("#videoElement");
+
+        if (navigator.mediaDevices.getUserMedia) {
+            navigator.mediaDevices.getUserMedia({ video: true })
+                .then(function (stream) {
+                    video.srcObject = stream;
+                })
+                .catch(function (err0r) {
+                    console.log("Something went wrong!");
+                });
+        }
+    </script>
 
     <script src="../../../static/js/student_test_page.js"></script>
 
