--- a/static/css/student_test_page.css
+++ b/static/css/student_test_page.css
@@ -89,7 +89,7 @@ body{
 /*----------------  CONTENTS ------------------------*/ 
 .contents{
     padding-top: 5%;
-    padding-right: 15vw;
+    padding-right: 20vw;
 }
 
 
@@ -257,7 +257,7 @@ img{
 
 .questionBar{
     height: 100vh;
-    width: 14vw;
+    width: 18vw;
     position: fixed;
     top: 7vh;
     right: 0;
@@ -291,7 +291,7 @@ td{
     display: flex;
     justify-content: space-evenly;
     border-collapse: separate;
-    border-spacing: 10px;
+    border-spacing: 20px;
 }
 .questionTable::-webkit-scrollbar {
     width: 8px;
@@ -310,8 +310,10 @@ td{
 /* For WebCam */
 
 #cameraDiv{
+    border: 10px solid  #00FF66;
     margin-top: 20px;
-    width: 100px   
+    width: 100%;
+    z-index: 30;
 }
 
 
