--- a/studentDashboard/templates/studentDashboard/student_test_page.html
+++ b/studentDashboard/templates/studentDashboard/student_test_page.html
@@ -47,14 +47,13 @@
     </nav>
 
     <div class="container-fluid mainscreen">
-
         <!-- Contents -->
         <div class="contents">
             <div class="col-12 pl-0 pr-0">
                 <form action="" method="POST" class="col-12 pl-0 pr-0">
                     <div class="col-12 questionDiv">
 
-                        <p class="question col-12 " name="question" id="qtext"> What is your Name </p>
+                        <p class="question col-12 " name="question" id="qtext"> {{question}} </p>
                     </div>
 
                     <div class="row optionRow mt-5 col-12 mr-0 ml-0">
