--- a/studentDashboard/templates/studentDashboard/dashboard.html
+++ b/studentDashboard/templates/studentDashboard/dashboard.html
@@ -183,10 +183,9 @@
     <!-- For Exam Page new pop up window -->
     <script type="text/javascript">
         function OpenPopUpwindow(urlName) {
-            alert(`hi bhaashdas ${urlName}`);
             var url = "{{ request.path }}studentTest/"+urlName+"/";
-            var windowFeatures = "fullscreen=yes, resizable=yes,scrollbars=yes , toolbar = no, menubar = no, location = no, directories = no , status = no";
-            window.open(url, 'popUpWindow', [windowFeatures]);
+            var windowFeatures = "fullscreen=yes, resizable=no,scrollbars=yes , toolbar = no, menubar = no, location = no, directories = no , status = no";
+            window.open(url, 'popUpWindow', [windowFeatures],"width="+screen.availWidth+",height="+screen.availHeight);
         }
     </script>
 
