--- a/studentDashboard/templates/studentDashboard/dashboard.html
+++ b/studentDashboard/templates/studentDashboard/dashboard.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard - Teacher</title>
+    <title>Dashboard</title>
 
     <!-- Google Scripts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -74,12 +74,15 @@
                     <p class="mytooltip">Dashboard</p>
                 </div>
 
-                <div class="parentDiv">
-                    <span class="material-icons myIcon">
-                        restore
-                    </span>
-                    <p class="mytooltip">History</p>
-                </div>
+                <a href="{% url 'historyPage' %}">
+                    <div class="parentDiv">
+
+                        <span class="material-icons myIcon">
+                            restore
+                        </span>
+                        <p class="mytooltip">History</p>
+                    </div>
+                </a>
                 <div class="parentDiv">
                     <span class="material-icons myIcon">
                         leaderboard
@@ -183,9 +186,9 @@
     <!-- For Exam Page new pop up window -->
     <script type="text/javascript">
         function OpenPopUpwindow(urlName) {
-            var url = "{{ request.path }}studentTest/"+urlName+"/";
-            var windowFeatures = "fullscreen=yes, resizable=no,scrollbars=yes , toolbar = no, menubar = no, location = no, directories = no , status = no";
-            window.open(url, 'popUpWindow', [windowFeatures],"width="+screen.availWidth+",height="+screen.availHeight);
+            var url = "{{ request.path }}studentTest/" + urlName + "/";
+            var windowFeatures = "fullscreen=yes, resizable=no, scrollbars=yes , toolbar = no, menubar = no, location = no, directories = no , status = no";
+            window.open(url, 'popUpWindow',[windowFeatures], "width="+screen.availWidth+",height="+screen.availHeight);
         }
     </script>
 
